--- a/mbio/uloha2/config_build.conf
+++ b/mbio/uloha2/config_build.conf
@@ -1,4 +1,3 @@
-SDK_AFIS=/home/martin/innovatrics/sdk_afis
-BUILD_TYPE=Debug
+BUILD_TYPE=Release
 BOOST=/home/martin/external/boost_1_59_0
 ARCH=_x64
